--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,4 @@
 node_modules/
-lib/
-esm/
+.vscode/
 .DS_STORE
-# Rust version - available when ready
-rs/*/target/
-rs/*/Cargo.lock
-
-.DS_STORE
-umd/
-# for demo
-.parcel-cache
 dist/
